# backend/app/data/models/__init__.py
@@ -9,3 +9,4 @@ from .role import Role, Permission, UserRole
 from .scraper import ScraperTarget, ScraperLog
 from .vehicle import Vehicle
 from .vehicle_valuation import VehicleValuation
+from .settings import UserSetting, ApiKey
